# clip-duplicates

./: .env.example  .gitignore  README.md  docker-compose.yml
flask-server/: Dockerfile.flask  postgres_encoding.py  pyproject.toml  server.py  utils.py
node-server/: .dockerignore  Dockerfile.node  server.js
npm-app/: .dockerignore  Dockerfile.npm  package-lock.json  package.json
npm-app/public/: index.html
npm-app/src/: App.js  Duplicates.js  EncodeImages.js  Gallery.js  Home.js  TextSearch.js
