[tool.poetry]
name = "clip-duplicates"
version = "0.1.0"
description = "CLIP duplicate detection and image search."
authors = ["Jeremy Costello <jeremy1@ualberta.ca>"]
license = "GNU GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "2.0.1", source = "torch"}
torchaudio = { version = "2.0.2", source = "torch"}
torchvision = { version = "0.15.2", source = "torch"}
sentence-transformers = "^2.2.2"
psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
flask-cors = "^4.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
